2010-01-26  Robert Dewar  <dewar@adacore.com>

	* par_sco.adb (Is_Logical_Operator): Exclude AND/OR/XOR
	* scos.ads: Clarify handling of logical operators

2010-01-26  Arnaud Charlet  <charlet@adacore.com>

	* s-tpoben.adb: Update comments.

2010-01-26  Robert Dewar  <dewar@adacore.com>

	* freeze.adb (Set_Small_Size): Don't set size if alignment clause
	present.

2010-01-26  Robert Dewar  <dewar@adacore.com>

	* scos.ads: Clean up documentation, remove obsolete XOR references
2010-01-26  Vincent Celier  <celier@adacore.com>

	* gnat_ugn.texi: Complete documentation on the restrictions for
	combined options in -gnatxxx switches.
	Fix typo.

2010-01-26  Arnaud Charlet  <charlet@adacore.com>

	* s-tpoben.adb (Initialize_Protection_Entries): If a PO is created from
	a controlled operation, abort is already deferred at this point, so we
	need to use Defer_Abort_Nestable.

2010-01-26  Vincent Celier  <celier@adacore.com>

	* prj-conf.adb (Get_Config_Switches): Check for a default language for
	a project extending a project with no languages.

2010-01-26  Vincent Celier  <celier@adacore.com>

	* switch-c.adb (Scan_Front_End_Switches): Take into account options
	that follow -gnatef.
	Allow -gnateG to be followed by other options.

2010-01-26  Robert Dewar  <dewar@adacore.com>

	* s-commun.ads, s-osprim-mingw.adb, s-stchop-vxworks.adb, sem_aggr.adb,
	s-vxwext.adb, sem_ch10.adb, sem_eval.adb, sem_prag.adb: Minor
	reformatting.

2010-01-26  Vasiliy Fofanov  <fofanov@adacore.com>

	* g-regist.adb, g-regist.ads (For_Every_Key): New generic procedure
	that allows to iterate over all subkeys of a key.

2010-01-26  Ed Falis  <falis@adacore.com>

	* sysdep.c: enable NFS for VxWorks MILS
	* env.c: enable __gnat_environ for VxWorks MILS
	* gcc-interface/Makefile.in: Add VxWorks MILS target pairs.

2010-01-25  Bob Duff  <duff@adacore.com>

	* sem_aggr.adb (Resolve_Array_Aggregate): Check for the case where this
	is an internally-generated positional aggregate, and the bounds are