@@ -1,5 +1,10 @@
 2010-01-26  Robert Dewar  <dewar@adacore.com>
 
+	* par_sco.adb (Traverse_Declarations_Or_Statements): Add processing for
+	Case.
+
+2010-01-26  Robert Dewar  <dewar@adacore.com>
+
 	* par_sco.adb (Is_Logical_Operator): Exclude AND/OR/XOR
 	* scos.ads: Clarify handling of logical operators
 
